--- a/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
@@ -168,6 +168,9 @@ services:
     demosplan\DemosPlanUserBundle\Repository\OrgaRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\User\Orga'
 
+    demosplan\DemosPlanUserBundle\Repository\InstitutionTagRepository:
+        $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\User\InstitutionTag'
+
     demosplan\DemosPlanUserBundle\Repository\MasterToebRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\User\MasterToeb'
 
