fix (refs T28987, T29255): Improve readability by avoiding be "ownership" as part of the classname.
In case of need to allow different creators/owners of InstitutionTags, this will be handled by additional owner properties.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
@@ -168,8 +168,8 @@ services:
     demosplan\DemosPlanUserBundle\Repository\OrgaRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\User\Orga'
 
-    demosplan\DemosPlanUserBundle\Repository\OrgaInstitutionTagRepository:
-        $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\User\OrgaInstitutionTag'
+    demosplan\DemosPlanUserBundle\Repository\InstitutionTagRepository:
+        $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\User\InstitutionTag'
 
     demosplan\DemosPlanUserBundle\Repository\MasterToebRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\User\MasterToeb'
