--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "leaflet": "^1.8.0",
     "leaflet.markercluster": "^1.5.3",
     "lscache": "^1.3.2",
+    "normalize.css": "^8.0.1",
     "ol": "~6.5.0",
     "plyr": "^3.7.2",
     "portal-vue": "^2.1.7",
