--- a/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
@@ -119,6 +119,10 @@ parameters:
     # define whether local container setup is used
     is_shared_folder: false
 
+    # Is current project deployed in production environment? May be used to
+    # block specific test or development features
+    prod_deployment: false
+
     # #refactor: This could perhaps be defined as params for ModifyUserCommand
     organisationIds_user_to_modify: []
 
