--- a/.github/workflows/FE_headerWriter.yml
+++ b/.github/workflows/FE_headerWriter.yml
@@ -28,8 +28,7 @@ jobs:
 
       - name: Run headerWriter
         run: |
-          pwd
-          python3 .github/FE_header_writer/headerWriter.py -p /home/runner/work/demosplan-core/demosplan-core -i **/node_modules/**/* */demosplan/DemosPlanCoreBundle/Resources/client/js/legacy/*/*.js *demosplan/DemosPlanCoreBundle/Resources/client/js/ResourceTypes.js *demosplan/DemosPlanCoreBundle/Resources/client/js/lib/* -a -v
+          python3 .github/FE_header_writer/headerWriter.py -p /home/runner/work/demosplan-core/demosplan-core -i  **/node_modules/**/* client/js/legacy/**/* client/js/legacy/*  client/js/legacy/**/**/*  demosplan/DemosPlanCoreBundle/Resources/client/js/ResourceTypes.js demosplan/DemosPlanCoreBundle/Resources/client/js/lib/* client/js/lib/* -a -v
         shell: bash
 
       - name: Configure git
