fix(refs T29293): make csp form-action sources configurable
to be overridden within the project parameters.yml

--- a/demosplan/DemosPlanCoreBundle/Resources/config/packages/nelmio_security.yaml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/packages/nelmio_security.yaml
@@ -29,8 +29,7 @@ nelmio_security:
             object-src:
                 - 'self'
             base-uri: '%demosplan_csp_base_uri%'
-            form-action:
-                - 'self'
+            form-action: '%demosplan_csp_form_action%'
             worker-src:
                 - 'none'
             upgrade-insecure-requests: '%https_only%' # upgrades HTTP requests to HTTPS transport
