--- a/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
@@ -349,6 +349,8 @@ parameters:
         - 'fonts.google.com'
         - 'fonts.gstatic.com'
         - 'data:'
+    demosplan_csp_form_action:
+        - 'self'
     demosplan_csp_frame_src: []
     demosplan_csp_frame_ancestors:
         - 'none'
