chore: extract utils to own package
- so they can be useded by addons or other projects.
-
- this is a startingpoint.
- the comented out files will follow if that is the architecture,we want to use.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dayjs": "^1.11.5",
     "deep-object-diff": "^1.1.7",
     "demosplan-ui": "file:client/ui",
+    "demosplan-utils": "file:client/js/utils",
     "dompurify": "^2.4.0",
     "font-awesome": "^4.7.0",
     "fscreen": "^1.2.0",
