chore (refs T29002): Add missing E-2-E Hooks.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/menus.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/menus.yml
@@ -346,6 +346,7 @@ submenu_procedures:
         path_params: ['procedureId', 'filterHash']
         permission: 'area_admin_assessmenttable'
         link_attributes:
+            data-cy: 'assessmenttable'
             data-extern-dataport: 'assessmenttable'
     statements:
         label: 'statements'
