--- a/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
@@ -211,6 +211,14 @@ area_imprint_text:
         access to it, it actually serves more as a parent and structural permission than one with an actual purpose.
     label: 'Basic ability to see imprint text of the website'
     loginRequired: false
+area_institution_tag_manage:
+    description: |-
+        Allows to access the management area of institution tags, to create, update, delete and use tags.
+        Please note that there are more fine grained permissions for the individual tasks.
+    expose: true
+    label: 'Manage (change and use) institution tags.'
+    loginRequired: true
+    parent: feature_institution_participation
 area_invite_unregistered_public_agencies:
     description: 'Invite institutions from addressbook by email to participate in procedure'
     expose: false
@@ -903,7 +911,7 @@ feature_institution_participation:
     loginRequired: true
 feature_institution_tag_create:
     descriptions: |-
-        Within a procedure institutions can be tagged in order to 
+        Within a procedure institutions can be tagged in order to
         group them by a custom category/label.
         When enabled this permission allows creating a tag
         setting the owningOrganisation to the current organisation.
@@ -911,7 +919,7 @@ feature_institution_tag_create:
     loginRequired: true
 feature_institution_tag_delete:
     descriptions: |-
-        Within a procedure institutions can be tagged in order to 
+        Within a procedure institutions can be tagged in order to
         group them by a custom category/label.
         When enabled this permission allows deleting tags
         given by the current organisation.
@@ -919,7 +927,7 @@ feature_institution_tag_delete:
     loginRequired: true
 feature_institution_tag_read:
     descriptions: |-
-        Within a procedure institutions can be tagged in order to 
+        Within a procedure institutions can be tagged in order to
         group them by a custom category/label.
         When enabled this permission allows reading the tags
         given by the current organisation.
@@ -927,7 +935,7 @@ feature_institution_tag_read:
     loginRequired: true
 feature_institution_tag_update:
     descriptions: |-
-        Within a procedure institutions can be tagged in order to 
+        Within a procedure institutions can be tagged in order to
         group them by a custom category/label.
         When enabled this permission allows to alter the tags
         that belong to the current organisation.
