--- a/.github/workflows/FE_headerWriter.yml
+++ b/.github/workflows/FE_headerWriter.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run headerWriter
         run: |
-          python3 .github/headerWriter.py -p /home/runner/work/demosplan-project-diplanbau/demosplan-project-diplanbau -i  **/node_modules/**/*  -a -v
+          python3 .github/headerWriter.py -p /home/runner/work/demosplan-core/demosplan-core -i  **/node_modules/**/* client/js/legacy/**/* client/js/legacy/*  client/js/legacy/**/**/*  demosplan/DemosPlanCoreBundle/Resources/client/js/ResourceTypes.js demosplan/DemosPlanCoreBundle/Resources/client/js/lib/* client/js/lib/* -a -v
         shell: bash
 
       - name: delete headerWriter
