--- a/demosplan/DemosPlanCoreBundle/Resources/config/packages/fos_elastica.yaml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/packages/fos_elastica.yaml
@@ -112,7 +112,7 @@ fos_elastica:
                         model_to_elastica_transformer:
                             service: path_based_model_to_elastica_transformer
                         provider: ~
-                        listener: ~
+                        listener: { enabled: false }
                         finder: ~
 
         procedures:
