--- a/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
@@ -211,6 +211,14 @@ area_imprint_text:
         access to it, it actually serves more as a parent and structural permission than one with an actual purpose.
     label: 'Basic ability to see imprint text of the website'
     loginRequired: false
+area_institution_tag_manage:
+    description: |-
+        Allows to access the management area of institution tags, to create, update, delete and use tags.
+        Please note that there are more fine grained permissions for the individual tasks.
+    expose: true
+    label: 'Manage (change and use) institution tags.'
+    loginRequired: true
+    parent: feature_institution_participation
 area_invite_unregistered_public_agencies:
     description: 'Invite institutions from addressbook by email to participate in procedure'
     expose: false
