--- a/.github/workflows/FE_headerWriter.yml
+++ b/.github/workflows/FE_headerWriter.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run headerWriter
         run: |
-          python3 .github/headerWriter.py -p /home/runner/work/demosplan-core/demosplan-core -i  'client/js/legacy/*' 'client/js/generated/*' '*/node_modules/*' 'client/js/lib/*' 'demosplan/DemosPlanCoreBundle/Resources/client/js/lib/*' -a -v
+          python3 .github/headerWriter.py -p /home/runner/work/demosplan-core/demosplan-core -i  'client/js/legacy/*' 'client/js/generated/*' '*/node_modules/*' 'client/js/lib/SideNav.js' 'client/js/lib/Detabinator.js' 'demosplan/DemosPlanCoreBundle/Resources/client/js/lib/*' -a -v
         shell: bash
 
       - name: delete headerWriter
