--- a/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
@@ -1709,12 +1709,14 @@ feature_segment_content_changes_view:
 feature_segment_polygon_read:
     description: |-
         Allows read-access to the statementSegment polygon property via StatementSegmentResourceType
+    expose: true
     label: 'allows read-access to the statementSegment polygon property used in the StatementSegmentResourceType'
     loginRequired: true
 feature_segment_polygon_set:
     description: |-
         Allow adding/modifying the statementSegment-polygon property. Used on statementSegment
         updates via the StatementSegmentResourceType
+    expose: true
     label: 'used for editing statementSegment polygons'
     loginRequired: true
 feature_segment_recommendation_edit:
