--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "@uppy/drag-drop": "^3.0.0",
     "@uppy/progress-bar": "^3.0.0",
     "@uppy/tus": "^3.0.1",
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
+    "@vue/compat": "^3.2.41",
+    "@vue/compiler-sfc": "^3.2.41",
     "a11y-datepicker": " ^0.9.0",
     "axios": "^0.27.2",
     "core-js": "^3.25.5",
@@ -60,6 +63,7 @@
     "demosplan-ui": "file:client/ui",
     "demosplan-utils": "file:client/js-utils",
     "dompurify": "^2.4.0",
+    "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "fscreen": "^1.2.0",
     "intl-messageformat": "^10.2.1",
@@ -89,15 +93,13 @@
     "tiptap-extensions": "^1.35.2",
     "tooltip.js": "^1.3.3",
     "uuid": "^9.0.0",
-    "vue": "~2.7.10",
+    "vue": "^3.2.41",
     "vue-click-outside": "^1.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-omnibox": "^0.3.7",
     "vue-scrollto": "^2.20.0",
     "vue-sliding-pagination": "^1.3.2",
-    "vue-template-compiler": "^2.7.10",
     "vue2-leaflet": "^2.7.1",
-    "vue2-leaflet-markercluster": "^3.1.0",
     "vuedraggable": "^2.24.3",
     "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.6.2"
