--- a/client/ui/package.json
+++ b/client/ui/package.json
@@ -14,10 +14,10 @@
     "@storybook/addon-docs": "6.5.13",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addon-links": "6.5.12",
-    "@storybook/vue": "6.5.12",
+    "@storybook/vue3": "6.5.12",
     "babel-loader": "^8.2.5",
     "js-beautify": "^1.14.7",
-    "vue-loader": "^15.9.8"
+    "vue-loader": "^16.8.3"
   },
   "scripts": {
     "build-css": "tailwindcss -i ./style/index.css -o ./style/style.css",
