--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@uppy/drag-drop": "^3.0.0",
     "@uppy/progress-bar": "^3.0.0",
     "@uppy/tus": "^3.0.1",
-    "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/compat": "^3.2.41",
     "@vue/compiler-sfc": "^3.2.41",
     "a11y-datepicker": " ^0.9.0",
@@ -99,6 +98,7 @@
     "vue-scrollto": "^2.20.0",
     "vue-sliding-pagination": "^1.3.2",
     "vue2-leaflet": "^2.7.1",
+    "vue2-leaflet-markercluster": "^3.1.0",
     "vuedraggable": "^2.24.3",
     "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.6.2"
