--- a/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
@@ -2716,5 +2716,14 @@ feature_create_procedure_from_XBauleitplanungMessage:
         Allows creating new procedures without being logged in.
     label: 'Verfahren verwalten'
     loginRequired: false
+feature_read_source_statement_via_api:
+    description: |
+        Used to gain Acces to the source-statement file via the api. This permission is a replica of feature_import_statement_pdf
+        because that permission is addon-specific and cant be used for additional non addon related checks within the core.
+        Access to the source-statement without this addon is necessary, so this permission substitutes the old one.
+    label: ' used in : Statement list and segment list '
+    expose: true
+    loginRequired: true
+
 
 
