--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@demos-europe/dp-consent": "^1.1.2",
     "@efrane/vuex-json-api": "0.0.38",
+    "@masterportal/masterportalapi": "^2.10.0",
     "@sentry/browser": "^7.16.0",
     "@sentry/integrations": "^7.16.0",
     "@sentry/tracing": "^7.16.0",
@@ -71,7 +72,7 @@
     "leaflet.markercluster": "^1.5.3",
     "lscache": "^1.3.2",
     "normalize.css": "^8.0.1",
-    "ol": "~6.5.0",
+    "ol": "~7.1.0",
     "plyr": "^3.7.2",
     "portal-vue": "^2.1.7",
     "proj4": "^2.8.0",
@@ -81,8 +82,11 @@
     "raf": "^3.4.1",
     "regenerator-runtime": "^0.13.9",
     "source-sans-pro": "^3.6.0",
+    "stream": "^0.0.2",
+    "string_decoder": "^1.3.0",
     "striptags": "^3.2.0",
     "swagger-ui-dist": "^4.14.0",
+    "timers-browserify": "^2.0.12",
     "tippy.js": "^6.3.7",
     "tiptap": "^1.32.2",
     "tiptap-commands": "^1.17.0",
