update php vendors
lcobucci/jwt needed to be fixed to 3.4 as current 4.2.1 lead to
immediate errors on start page "Unable to create a signed JWT
from the given configuration."

--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
         "jmikola/geojson": "^1.0",
         "jms/serializer-bundle": "^4.0",
         "knplabs/knp-menu-bundle": "^3.2",
+        "lcobucci/jwt": "^3.4",
         "league/flysystem-bundle": "^2.0",
         "league/fractal": "^0.19",
         "league/html-to-markdown": "^5.0",
