--- a/demosplan/DemosPlanCoreBundle/Resources/config/menus.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/menus.yml
@@ -363,6 +363,9 @@ submenu_procedures:
     segments:
         label: 'segments'
         path: 'dplan_segments_list'
+        child_paths: [
+            'dplan_segments_list_by_query_hash',
+        ]
         path_params: ['procedureId']
         permission: 'area_statement_segmentation'
         link_attributes:
