feat: removing plugins from bundles.php, composer.json and kernel

--- a/composer.json
+++ b/composer.json
@@ -155,7 +155,8 @@
         "psr-4": {
           "demosplan\\": "demosplan/",
           "demosplan\\deployment\\": "deploy/",
-          "Projects\\": "projects/"
+          "Projects\\": "projects/",
+          "demosplan\\addons\\": "addons/vendor/demos-europe/"
         }
     },
     "autoload-dev": {
