feat: removing plugin references and changing namespaces
I'm sorry that this is one big dump of changes, but it's late, I'm tired and I don't really know anymore where I did what.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
@@ -6,11 +6,8 @@ services:
     demosplan\DemosPlanCoreBundle\Repository\ConsultationTokenRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\ConsultationToken'
 
-    demosplan\plugins\FloodControl\Repository\FloodRepository:
-        $entityClass: 'demosplan\plugins\FloodControl\Entity\Flood'
-
-    demosplan\plugins\workflow\SegmentsManager\Repository\Segment\SegmentRepository:
-        $entityClass: 'demosplan\plugins\workflow\SegmentsManager\Entity\Segment'
+    demosplan\addons\workflow\SegmentsManager\Repository\Segment\SegmentRepository:
+        $entityClass: 'demosplan\addons\workflow\SegmentsManager\Entity\Segment'
 
     demosplan\DemosPlanNewsBundle\Repository\NewsRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\News\News'
