--- a/client/ui/package.json
+++ b/client/ui/package.json
@@ -4,9 +4,30 @@
   "description": "Vue components, Vue directives, Design Token and Scss files to build interfaces for demosPlan.",
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.1",
+    "@uppy/core": "^3.0.1",
+    "@uppy/drag-drop": "^3.0.0",
+    "@uppy/progress-bar": "^3.0.0",
+    "@uppy/tus": "^3.0.1",
+    "a11y-datepicker": " ^0.9.0",
+    "dayjs": "^1.11.5",
+    "dompurify": "^2.4.0",
+    "ismobilejs": "^1.1.1",
+    "lscache": "^1.3.2",
+    "plyr": "^3.7.2",
     "style-dictionary": "^3.7.1",
     "tailwindcss": "^3.2.1",
-    "v-tooltip": "2.1.3"
+    "tippy.js": "^6.3.7",
+    "tiptap": "^1.32.2",
+    "tiptap-commands": "^1.17.0",
+    "tiptap-extensions": "^1.35.2",
+    "uuid": "^9.0.0",
+    "v-tooltip": "2.1.3",
+    "vue-click-outside": "^1.1.0",
+    "vue-multiselect": "^2.1.6",
+    "vue-omnibox": "^0.3.7",
+    "vue-sliding-pagination": "^1.3.2",
+    "vuedraggable": "^2.24.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
