feat: integrate flood control addon into core

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
@@ -57,6 +57,9 @@ services:
     demosplan\DemosPlanCoreBundle\Repository\FaqCategoryRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\FaqCategory'
 
+    demosplan\DemosPlanCoreBundle\Repository\FloodRepository:
+        $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Flood'
+
     demosplan\DemosPlanCoreBundle\Repository\SettingRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Setting'
 
