--- a/demosplan/DemosPlanCoreBundle/Resources/config/packages/lexik_jwt_authentication.yaml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/packages/lexik_jwt_authentication.yaml
@@ -2,7 +2,7 @@ lexik_jwt_authentication:
     encoder:
         # encryption algorithm used by the encoder service
         signature_algorithm: HS256
-    secret_key: '%jwt_passphrase%'
+    secret_key: '%env(JWT_PASSPHRASE)%'
     token_ttl: 259200
     # set custom header for jwt to be able to use it together with basic header authorisation
     token_extractors:
