feat: change namespaces
All referencing namespace mentions are being adjusted to all the files now living in the core.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/packages/fos_elastica.yaml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/packages/fos_elastica.yaml
@@ -108,7 +108,7 @@ fos_elastica:
                     indexable_callback: 'shouldBeIndexed'
                     persistence:
                         driver: orm
-                        model: demosplan\addons\workflow\SegmentsManager\Entity\Segment
+                        model: demosplan\DemosPlanCoreBundle\Entity\Statement\Segment
                         model_to_elastica_transformer:
                             service: path_based_model_to_elastica_transformer
                         provider: ~
