--- a/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/permissions.yml
@@ -909,6 +909,12 @@ feature_institution_participation:
     expose: true
     label: Institutionsbeteiligung
     loginRequired: true
+feature_institution_tag_assign:
+    description: |-
+        allows to tag an institution with an existing InstitutionTag.
+        The InstitutionTag used to tag others with, has to have its owningOrganisation be the same
+        as the current users organisation.
+    label: 'allows to tag an Institution with a InstitutionTag'
 feature_institution_tag_create:
     descriptions: |-
         Within a procedure institutions can be tagged in order to
