--- a/.reviewdog.yml
+++ b/.reviewdog.yml
@@ -3,4 +3,4 @@ runner:
 #        cmd: "node_modules/.bin/eslint -c infrastructure/linters/eslintrc.js demosplan client"
 
     phpstan:
-        cmd: "DEVELOPMENT_CONTAINER=1 php bin/diplanbau dplan:phpstan --ci -l2"
+        cmd: "DEVELOPMENT_CONTAINER=1 php bin/test dplan:phpstan --ci -l2"
