--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "lint:scss": "stylelint {demosplan/DemosPlanCoreBundle/Resources/client/scss,projects}/**/*.scss"
   },
   "dependencies": {
-    "@demos-europe/dp-consent": "^1.1.2",
     "@demos-europe/demosplan-ui": "0.0.2",
     "@demos-europe/demosplan-utils": "0.0.2",
+    "@demos-europe/dp-consent": "^1.1.2",
     "@efrane/vuex-json-api": "0.0.38",
     "@masterportal/masterportalapi": "^2.10.0",
     "@sentry/browser": "^7.16.0",
@@ -52,7 +52,6 @@
     "@uppy/core": "^3.0.4",
     "@uppy/drag-drop": "^3.0.0",
     "@uppy/progress-bar": "^3.0.0",
-    "@uppy/tus": "^3.0.1",
     "a11y-datepicker": " ^0.9.0",
     "core-js": "^3.26.1",
     "d3": "^7.6.1",
@@ -75,8 +74,11 @@
     "plyr": "^3.7.2",
     "portal-vue": "^2.1.7",
     "proj4": "^2.8.0",
+    "prosemirror-model": "^1.18.3",
     "prosemirror-schema-basic": "^1.2.0",
     "prosemirror-schema-list": "^1.2.2",
+    "prosemirror-state": "^1.4.2",
+    "prosemirror-view": "^1.29.1",
     "qs": "^6.11.0",
     "raf": "^3.4.1",
     "regenerator-runtime": "^0.13.11",
@@ -87,15 +89,10 @@
     "swagger-ui-dist": "^4.14.0",
     "timers-browserify": "^2.0.12",
     "tippy.js": "^6.3.7",
-    "tiptap": "^1.32.2",
-    "tiptap-commands": "^1.17.0",
-    "tiptap-extensions": "^1.35.2",
     "tooltip.js": "^1.3.3",
     "uuid": "^9.0.0",
     "vue": "~2.7.10",
-    "vue-click-outside": "^1.1.0",
     "vue-multiselect": "^2.1.6",
-    "vue-omnibox": "^0.3.7",
     "vue-scrollto": "^2.20.0",
     "vue-sliding-pagination": "^1.3.2",
     "vue-template-compiler": "^2.7.10",
