--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -302,7 +302,7 @@ services:
 
     demosplan\DemosPlanCoreBundle\Permissions\CachingYamlPermissionCollection:
         arguments:
-            $path: !php/const 'demosplan\DemosPlanCoreBundle\Permissions::PERMISSIONS_YML'
+            $path: !php/const 'demosplan\DemosPlanCoreBundle\Permissions\Permissions::PERMISSIONS_YML'
             $cacheKey: 'permissionsYml'
 
     demosplan\DemosPlanCoreBundle\Permissions\PermissionsInterface:
