--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -58,8 +58,8 @@ jobs:
 
        # use bin/test
 
-      - name: Warmup cache
-        run: DEVELOPMENT_CONTAINER=1 php bin/test cache:clear
+    #  - name: Warmup cache
+    #    run: DEVELOPMENT_CONTAINER=1 php bin/test cache:clear
 
       - name: Woof
         env:
