--- a/tests/backend/core-application/app/config/config_test.yml
+++ b/tests/backend/core-application/app/config/config_test.yml
@@ -19,7 +19,7 @@ parameters:
     email_bouncefile_path: "%kernel.cache_dir%"
 
     kernel.secret: 'testsecret'
-
+    database_name: 'test'
     database_host: ''
     database_user: ''
     database_password: ''
