--- a/demosplan/DemosPlanCoreBundle/Resources/config/packages/twig.yaml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/packages/twig.yaml
@@ -10,5 +10,5 @@ twig:
         sentry_dsn: '%sentry_dsn%'
     form_themes:
         - '@DemosPlanCore/form/styled_fields.html.twig'
-    paths:
-        '%kernel.project_dir%/demosplan/plugins': 'DemosPlugin'
+  #  paths:
+   #     '%kernel.project_dir%/demosplan/plugins': 'DemosPlugin'
