--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -61,6 +61,8 @@ jobs:
 
       - name: Warmup cache
         run: DEVELOPMENT_CONTAINER=1 php bin/test cache:clear
+      - test ls:
+        run: ls -la /tmp/
 
       - name: Woof
         env:
