fix yaml syntax

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -62,7 +62,8 @@ jobs:
       - name: Warmup cache
         run: DEVELOPMENT_CONTAINER=1 php bin/test cache:clear
       - test ls:
-        run: ls -la /tmp/
+        run: |
+         ls -la /tmp/
 
       - name: Woof
         env:
