--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -32,6 +32,10 @@ jobs:
           extensions: gd soap sockets zip
           tools: composer:v2
 
+      - name: test ls
+        run: |
+         ls -la /tmp/
+
       - name: Cache php modules
         uses: actions/cache@v3.0.8
         with:
