--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "lint:scss": "stylelint {demosplan/DemosPlanCoreBundle/Resources/client/scss,projects}/**/*.scss"
   },
   "dependencies": {
+    "@demos-europe/demosplan-ui": "file:demosplan-ui",
+    "@demos-europe/demosplan-utils": "github:demos-europe/demosplan-js-utils#main",
     "@demos-europe/dp-consent": "^1.1.2",
-    "@demos-europe/demosplan-ui": "0.0.4",
-    "@demos-europe/demosplan-utils": "0.0.2",
     "@efrane/vuex-json-api": "0.0.38",
     "@masterportal/masterportalapi": "^2.10.0",
     "@sentry/browser": "^7.16.0",
