--- a/.github/workflows/FE_headerWriter.yml
+++ b/.github/workflows/FE_headerWriter.yml
@@ -12,7 +12,7 @@ jobs:
     uses: demos-europe/demosplan-workflows/.github/workflows/FE_headerWriter.yml@main
     with:
         project_path: /home/runner/work/demosplan-core/demosplan-core
-        ignore_path: \'client/js/legacy/*\' \'client/js/generated/*\' \'*/node_modules/*\' \'client/js/lib/core/SideNav.js\' \'client/js/lib/core/Detabinator.js\' \'demosplan/DemosPlanCoreBundle/Resources/client/js/lib/*\'
+        ignore_path: 'client/js/legacy/*' 'client/js/generated/*' '*/node_modules/*' 'client/js/lib/core/SideNav.js' 'client/js/lib/core/Detabinator.js' 'demosplan/DemosPlanCoreBundle/Resources/client/js/lib/*'
         gpg_user_name: Demos-CI
     secrets:
         gpg_email: ${{ secrets.DEVOPS_GPG_EMAIL }}
