using correct path in template

--- a/config/linters/phpstan.template.neon
+++ b/config/linters/phpstan.template.neon
@@ -2,4 +2,4 @@ includes:
     - ./phpstan.dist.neon
 parameters:
     symfony:
-        container_xml_path: /tmp/core-application/cache/test/Tests_CoreApplication_Application_DemosPlanTestKernelTestDebugContainer.xml
+        container_xml_path: {{ container_path }}
