--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lint:scss": "stylelint {demosplan/DemosPlanCoreBundle/Resources/client/scss,projects}/**/*.scss"
   },
   "dependencies": {
-    "@demos-europe/demosplan-ui": "github:demos-europe/demosplan-ui#main",
+    "@demos-europe/demosplan-ui": "github:demos-europe/demosplan-ui#53ff3ce",
     "@demos-europe/demosplan-utils": "github:demos-europe/demosplan-js-utils#main",
     "@demos-europe/dp-consent": "^1.1.2",
     "@efrane/vuex-json-api": "0.0.38",
