--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "cebe/php-openapi": "^1.5",
         "cocur/slugify": "^4.0",
         "composer/package-versions-deprecated": "1.11.99.5",
+        "demos-europe/demosplan-addon": "dev-main",
         "demos-europe/edt-dql": "^0.14.0",
         "demos-europe/edt-extra": "^0.14.0",
         "demos-europe/edt-jsonapi": "^0.14.0",
