feat (refs Ado #2290, T29403): initial communication to keycloak

--- a/demosplan/DemosPlanCoreBundle/Resources/config/config_dev_container.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/config_dev_container.yml
@@ -44,6 +44,7 @@ parameters:
     gateway_url: '/app_dev.php/dplan/login'
 
     demosplan_user_authenticator_service:
+        - 'demosplan\DemosPlanCoreBundle\Security\Authentication\Authenticator\OzgKeycloakAuthenticator'
         - 'demosplan\DemosPlanCoreBundle\Security\Authentication\Authenticator\LoginFormAuthenticator'
         - 'demosplan\DemosPlanCoreBundle\Security\Authentication\Authenticator\OsiHHStaticAuthenticator'
         - 'demosplan\DemosPlanCoreBundle\Security\Authentication\Authenticator\OsiSHStaticAuthenticator'
