--- a/.env
+++ b/.env
@@ -19,6 +19,12 @@ APP_SECRET=7c3c6ba97270803aa3f2113c25c4984d
 APP_TEST_SHARD=test
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
+
+OAUTH_KEYCLOAK_CLIENT_ID=keycloak_id
+OAUTH_KEYCLOAK_CLIENT_SECRET=keycloak_secret
+OAUTH_KEYCLOAK_AUTH_SERVER_URL=localhost
+OAUTH_KEYCLOAK_REALM=main
+
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
