--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           composer --version
           composer install --no-interaction
+          composer dump-autoload
 
        # use bin/test
 
