ci(refs T30148): call reusable actions from public repo

--- a/.github/workflows/FE_headerWriter.yml
+++ b/.github/workflows/FE_headerWriter.yml
@@ -8,7 +8,7 @@ on:
       - '**.vue'
 
 jobs:
-  FE_headerWriter:
+  call:
     uses: demos-europe/demosplan-workflows/.github/workflows/FE_headerWriter.yml@main
     with:
         project_path: /home/runner/work/demosplan-core/demosplan-core
